Fixed another small layout issue

--- a/src/app/aboutmecontent/aboutmecontent.component.sass
+++ b/src/app/aboutmecontent/aboutmecontent.component.sass
@@ -5,11 +5,6 @@
 /*MOBILE-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
 @media screen and (max-device-width: 800px) /*-- phone --*/
-	.rect 
-		height: 500px
-	
 	#aboutme 
-		font-size: 25px
-		width: 95%
-		margin-top: 30px
+		font-size: 17px
 		text-align: justify
